@@ -1835,8 +1835,10 @@ GST_TAG_VERSION
 GST_TAG_ISRC
 GST_TAG_ORGANIZATION
 GST_TAG_COPYRIGHT
+GST_TAG_COPYRIGHT_URI
 GST_TAG_CONTACT
 GST_TAG_LICENSE
+GST_TAG_LICENSE_URI
 GST_TAG_PERFORMER
 GST_TAG_DURATION
 GST_TAG_CODEC
